--- a/views/home.jade
+++ b/views/home.jade
@@ -5,7 +5,7 @@ html
   body
     div.container
       div.jumbotron
-        h1 Hello Peeeeple!!!
+        h1 Hello People!!!
         p Click the button below to head over to my website...
         p 
           a.btn.btn-primary(href="http://www.seleniumframework.com") Website
